fix player overflow and removes selectability of text

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ body {
     background-color: #f4f4f4;
     color: #333;
     overflow-x: hidden;
+    -webkit-user-select: none; /* Chrome, Opera (older versions), iOS Safari */
+    -webkit-touch-callout: none; /* Safari */
+    -moz-user-select: none; /* Mozilla */
+    -ms-user-select: none; /* Microsoft Edge/IE */
+    user-select: none; /* Modern browsers */
 }
 
 .top-bar {
@@ -101,7 +106,7 @@ body {
 }
 
 .content {
-    margin-left: 270px;
+    margin-left: 250px;
     padding: 20px;
     padding-top: 70px;
     transition: margin-left 0.3s;
